src/styles/global.css
@import "tailwindcss";
@import "@fontsource/ibm-plex-sans";
@import "@fontsource/ibm-plex-serif";
@import "@fontsource/iosevka";
@import "tw-animate-css";

@plugin "@tailwindcss/typography";
@plugin "@tailwindcss/forms";
@plugin "tailwind-scrollbar";

@custom-variant dark (&:where([data-theme="dark"], [data-theme="dark"] *));

.grid-areas-layout {
  grid-template-areas: "header header header" "main main main" "footer footer footer";
}

/* media query for large variant grid template areas */
@media (min-width: 64rem) {
  .grid-areas-layout {
    grid-template-areas: "sidebar header header" "sidebar main main" "sidebar footer footer";
  }
}

/* tailwind 4.0 utility function for grid-area */
@layer utilities {
  .grid-area-header {
    grid-area: header;
  }

  .grid-area-main {
    grid-area: main;
  }

  .grid-area-footer {
    grid-area: footer;
  }

  .grid-area-sidebar {
    grid-area: sidebar;
  }
}

@theme {
  --grid-cols-layout: 0.7fr 2.3fr 1fr;
  --grid-rows-layout: 0.2fr 2.6fr 0.2fr;

  --font-sans: "IBM Plex Sans", sans-serif;
  --font-serif: "IBM Plex Serif", serif;
  --font-mono: "Iosevka", monospace;
  --color-branding-neutral-50: #ecf0f4;
  --color-branding-neutral-100: #dbe4eb;
  --color-branding-neutral-200: #b8c9d6;
  --color-branding-neutral-300: #91acc0;
  --color-branding-neutral-400: #6d91ab;
  --color-branding-neutral-500: #52768f;
  --color-branding-neutral-600: #415d71;
  --color-branding-neutral-700: #304554;
  --color-branding-neutral-800: #21303a;
  --color-branding-neutral-900: #11181d;
  --color-branding-neutral-950: #070b0d;
  --color-branding-black: #091725;
  --color-branding-white: #f3f7fc;
  --color-branding-navy-50: #e2edf8;
  --color-branding-navy-100: #c6dbf1;
  --color-branding-navy-200: #8cb8e3;
  --color-branding-navy-300: #5394d5;
  --color-branding-navy-400: #2c70b4;
  --color-branding-navy-500: #1e4c7b;
  --color-branding-navy-600: #183d62;
  --color-branding-navy-700: #122e4a;
  --color-branding-navy-800: #0c1f31;
  --color-branding-navy-900: #060f19;
  --color-branding-navy-950: #03080c;
  --color-branding-purple-50: #f8f0fe;
  --color-branding-purple-100: #eeddfd;
  --color-branding-purple-200: #dcbbfc;
  --color-branding-purple-300: #cb99fa;
  --color-branding-purple-400: #ba77f9;
  --color-branding-purple-500: #a855f7;
  --color-branding-purple-600: #8815f4;
  --color-branding-purple-700: #6609be;
  --color-branding-purple-800: #44067f;
  --color-branding-purple-900: #22033f;
  --color-branding-purple-950: #120222;

  --color-branding-gray-50: #fafafa;
  --color-branding-gray-100: #f7f7f8;
  --color-branding-gray-200: #ecedee;
  --color-branding-gray-300: #e4e5e7;
  --color-branding-gray-400: #d9dade;
  --color-branding-gray-500: #d1d3d7;
  --color-branding-gray-600: #a2a6ae;
  --color-branding-gray-700: #777d88;
  --color-branding-gray-800: #4e525a;
  --color-branding-gray-900: #282a2e;
  --color-branding-gray-950: #131416;
  --color-branding-blue-50: #e9f1fb;
  --color-branding-blue-100: #cfe1f7;
  --color-branding-blue-200: #9fc3ef;
  --color-branding-blue-300: #73a8e8;
  --color-branding-blue-400: #4389e0;
  --color-branding-blue-500: #216dca;
  --color-branding-blue-600: #1b58a2;
  --color-branding-blue-700: #14427b;
  --color-branding-blue-800: #0d2b4f;
  --color-branding-blue-900: #061527;
  --color-branding-blue-950: #040c16;
  --color-branding-green-50: #e5f6e5;
  --color-branding-green-100: #caecca;
  --color-branding-green-200: #96da96;
  --color-branding-green-300: #61c761;
  --color-branding-green-400: #3ba63b;
  --color-branding-green-500: #287128;
  --color-branding-green-600: #205a20;
  --color-branding-green-700: #184418;
  --color-branding-green-800: #102d10;
  --color-branding-green-900: #081708;
  --color-branding-green-950: #040b04;
  --color-branding-yellow-50: #fff9eb;
  --color-branding-yellow-100: #fef2d2;
  --color-branding-yellow-200: #fde4a5;
  --color-branding-yellow-300: #fdd87d;
  --color-branding-yellow-400: #fccb50;
  --color-branding-yellow-500: #fbbd23;
  --color-branding-yellow-600: #e1a304;
  --color-branding-yellow-700: #aa7b03;
  --color-branding-yellow-800: #6e5002;
  --color-branding-yellow-900: #372801;
  --color-branding-yellow-950: #1e1601;
  --color-branding-brown-50: #f4f0eb;
  --color-branding-brown-100: #e9e1d8;
  --color-branding-brown-200: #d3c2b1;
  --color-branding-brown-300: #bfa78d;
  --color-branding-brown-400: #a98865;
  --color-branding-brown-500: #86694b;
  --color-branding-brown-600: #6c553c;
  --color-branding-brown-700: #52402e;
  --color-branding-brown-800: #34291d;
  --color-branding-brown-900: #1a150f;
  --color-branding-brown-950: #0d0a07;
  --color-branding-red-50: #fbe9e9;
  --color-branding-red-100: #f8d3d3;
  --color-branding-red-200: #f1a7a7;
  --color-branding-red-300: #ea7b7b;
  --color-branding-red-400: #e34f4f;
  --color-branding-red-500: #dc2626;
  --color-branding-red-600: #b01c1c;
  --color-branding-red-700: #841515;
  --color-branding-red-800: #580e0e;
  --color-branding-red-900: #2c0707;
  --color-branding-red-950: #160404;
}

@theme inline {
  --color-branding-neutral: var(--color-branding-neutral-500);
  --color-branding-navy: var(--color-branding-navy-500);
  --color-branding-purple: var(--color-branding-purple-500);
  --color-branding-gray: var(--color-branding-gray-500);
  --color-branding-blue: var(--color-branding-blue-500);
  --color-branding-green: var(--color-branding-green-600);
  --color-branding-yellow: var(--color-branding-yellow-400);
  --color-branding-brown: var(--color-branding-brown-500);
  --color-branding-red: var(--color-branding-red-500);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --color-foreground: var(--foreground);
  --color-background: var(--background);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
}

:root {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
}

.dark {
  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

